<resources>
    <string name="app_name" translatable="false">Just Java</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>
    <string name="add">Add another cup of coffee to your purchase</string>
    <string name="reset">Reset calculation</string>
    <string name="decrease">remove 1 cup</string>
    <string name="ordering">You are going to order</string>
    <string name="ordering_cups_price">cups of coffee at a price of</string>
    <string name="empty_order">You can't order nothing, please buy at least 1 cup of coffee</string>
    <string name="resetted">Cups of coffee is already reset.</string>
    <string name="negativeCups">You can't have negative number of cups of coffee</string>
</resources>
